# veloura

./: .env.example  .gitignore  Makefile  README.md  Summary.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1a703009642e_add_coupons_inventory_transactions_.py  27821d503949_initial_schema.py  28995c8e7dc4_extend_style_profile_with_full_.py  62b95f8bdcbd_split_address_is_default_into_shipping_.py  76eab1589c3b_add_reviews_and_review_helpfulness.py  89bcc54cb973_add_indexes_for_product_brand_material_.py  fe61f4c8cdef_split_user_full_name_into_first_name_.py
apps/api/src/veloura_api/: config.py  database.py  dependencies.py  logging_config.py  main.py  security.py  utils.py
apps/api/src/veloura_api/ai/: client.py  outfit_generation.py  preferences.py  refinement.py  retrieval.py
apps/api/src/veloura_api/middleware/: request_context.py
apps/api/src/veloura_api/models/: __init__.py  address.py  base.py  cart.py  category.py  chat.py  coupon.py  feedback.py  inventory_transaction.py  order.py  order_status_history.py  outfit.py  product.py  review.py  style_profile.py  user.py  wishlist.py
apps/api/src/veloura_api/repositories/: address_repository.py  cart_repository.py  chat_repository.py  coupon_repository.py  (+5 more)
apps/api/tests/: conftest.py  test_account.py  test_admin.py  test_ai_refinement.py  test_ai_stylist.py  test_auth.py  test_cart.py  test_coupons.py  test_health.py  test_orders.py  test_products.py  test_recommendations.py  test_reviews.py  test_seed_images.py  test_wishlist.py
(+156 files in other folders)
